# Learn_Flutter

./: .gitignore  README.md
.github/workflows/: main.yml
dart_tutorial/: README.md  macos_main.dart  main.dart  pubspec.yaml
dart_tutorial/.dart_tool/: package_config.json
dart_tutorial/hello_library/: Makefile  hello.c  hello.def  hello.h  hello_test  libhello.1.0.0.dylib
dart_tutorial/primitives_library/: CMakeLists.txt  Makefile  libprimitives.1.0.0.dylib  libprimitives.1.dylib  libprimitives.dylib  primitives.c  primitives.def  primitives.h
dart_tutorial/struct_library/: CMakeLists.txt  Makefile  libstruct.1.0.0.dylib  libstruct.1.dylib  libstruct.dylib  struct.c  struct.h
firebase_services/: pubspec.yaml
firebase_services/android/app/: build.gradle  google-services.json
firebase_services/ios/Runner.xcodeproj/: project.pbxproj
firebase_services/lib/: firebase_options.dart  main.dart
firebase_services/macos/: firebase_app_id_file.json
handle_data/: README.md  pubspec.yaml
handle_data/lib/: main.dart
handle_data/test/: widget_test.dart
puzzle/: analysis_options.yaml  pubspec.yaml
puzzle/ios/: ExportOptions.plist
puzzle/lib/: main.dart
puzzle/test/: widget_test.dart
test_project/: analysis_options.yaml
test_project/lib/: main.dart
widget_collections/: README.md  pubspec.yaml
widget_collections/lib/: basic_widgets.dart  main.dart
widget_collections/linux/: CMakeLists.txt  my_application.cc
widget_collections/test/: widget_test.dart
widget_collections/web/: index.html  manifest.json
widget_collections/windows/: CMakeLists.txt
(+40 files in other folders)
